--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@eslint/create-config": "^0.4.1",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "eslint": "^8.30.0",
     "eslint-plugin-react": "^7.31.11",
-    "typescript": "^4.6.3"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   },
   "private": true
 }
